--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+.win-screen{
+    position:fixed;
+    margin: auto;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+}
+
+.win-screen-contents{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    font-size: 18px;
+    color: white;
+    background-color: silver;
+    margin: 30vh auto;
+    padding: 10%;
+    border: 5px solid black;
+    border-radius: 10%;
+    width: 50%;
+}
+
+button{
+    background-color: white;
+    padding: .75em;
+    border: solid black 2px;
+    border-radius: 50%;
+    font-size: 18px;
+}
+
 .hidden {
   display: none;
 }
@@ -7,7 +40,7 @@ body {
   background-color: olivedrab;
 }
 
-#reshuffle {
+.reshuffle {
   display: inline-block;
   text-align: center;
   align-items: center;
@@ -45,11 +78,13 @@ body {
 .title {
   text-align: center;
   display: inline-block;
+  margin: 0;
 }
 #header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+
   width: 100vw;
 }
 h2 {
